fix: handle explorer.exe restarts when replicating windows taskbar

--- a/bar/bar.ini
+++ b/bar/bar.ini
@@ -5,7 +5,7 @@ accuratetext=1
 defaultdraggable=0
 contexttitle=open settings
 contextaction=[!activateconfig "#rootConfig#\settings"]
-onrefreshaction=[&setFocus][!commandmeasure script "pin"]
+onrefreshaction=[!CommandMeasure RunAppbarReserver "Run"][&setFocus][!commandmeasure script "pin"]
 oncloseaction=[!updatemeasure bar "#currentConfig#\assist\bg"]
 
 [metadata]
@@ -30,6 +30,13 @@ updatedivider=-1
 nextAnim=0
 processCount=0
 hover=0
+
+[RunAppbarReserver]
+Measure=Plugin
+Plugin=RunCommand
+Program=PowerShell.exe
+Parameter=-ExecutionPolicy Bypass -File "#@#inc\appbarReserver.ps1"
+DynamicVariables=1
 
 [shadow]
 meter=image
