fix: autocalculate formula no longer causes the appbar to overlay windows

--- a/settings/settings.ini
+++ b/settings/settings.ini
@@ -1094,7 +1094,7 @@ meter=string
 meterstyle=text|header|link
 Y=R
 group=all|configure
-leftmouseupaction=[!setvariable reservedSpace "((#yPadding#*2)+#bHeight#+#stkW#-1)"][!writekeyvalue variables reservedSpace "[#reservedSpace]" "#@#inc\var.inc"][#rC]
+leftmouseupaction=[!setvariable reservedSpace "((#yPadding#*2)+#bHeight#+#stkW#+#edgePadding#-1)"][!writekeyvalue variables reservedSpace "((#yPadding#*2)+#bHeight#+#stkW#+#edgePadding#-1)" "#@#inc\var.inc"][#rC]
 
 [left/right padding]
 meter=string
